--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,28 +1,35 @@
 .navbar {
-  width: 99vw;
-  height: 8vh;
+  width: 50vh;
+  height: 100vh;
   position: fixed;
+  overflow: hidden;
   top: 0;
+  left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  -webkit-transition: 500ms;
+  transition: 500ms;
 }
 
-.navbar a {
+.navbar a,
+.navbar form {
+  position: relative;
+  z-index: 99;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 15%;
+  width: 100px;
+  height: 10vh;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -30,98 +37,43 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
   color: #f5487f;
   font-size: 2rem;
   -webkit-transition: 500ms;
   transition: 500ms;
+  border-radius: 0 2rem 2rem 0;
 }
 
-.navbar a i {
-  margin: 0 1rem;
-}
-
-.navbar form {
-  width: 50%;
-  overflow-x: hidden;
-  height: 75%;
+.navbar a i,
+.navbar form i {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  margin-right: 24vw;
-  -webkit-transition: 900ms;
-  transition: 900ms;
+  margin: 0 2rem;
+  min-width: 40px;
 }
 
-.navbar input,
-.navbar button {
-  background-color: #553772;
-  border: 3px solid #f5487f;
-  border-radius: 2rem;
-  color: #f5487f;
-  -webkit-transition: 900ms;
-  transition: 900ms;
-}
-
-.navbar input {
-  opacity: 0;
-  width: 0%;
+.navbar a h2,
+.navbar form h2 {
   height: 90%;
-  text-align: right;
-  padding-right: 1rem;
-  font-size: 1.5rem;
-  color: #f5487f;
 }
 
-.navbar button {
-  height: 100%;
-  width: 2.8rem;
-  margin: 0 1rem;
-  padding: 0;
-  cursor: pointer;
-  font-size: 1.6rem;
-  -webkit-transition: 500ms;
-  transition: 500ms;
-  text-align: right;
-}
-
-.navbar button i {
-  position: relative;
-  top: 0.2rem;
-  right: 0.1rem;
-}
-
-.navbar form:hover > input {
-  width: 70%;
-  opacity: 1;
-}
-
-.navbar input:focus,
-.navbar button:focus {
-  outline: none;
-  color: #e3e3e3;
-  border-color: #e3e3e3;
-}
-
-.navbar input:focus {
-  width: 70%;
-  opacity: 1;
-}
-
-.navbar button:hover,
 .navbar a:hover,
-.navbar input:hover {
+.navbar form:hover {
+  width: 40vw;
+  background-color: #553772;
   color: #e3e3e3;
-  border-color: #e3e3e3;
+}
+
+.navbar a:hover > h2,
+.navbar form:hover > h2 {
+  display: block;
 }
 
 span {
@@ -186,7 +138,8 @@ input::placeholder {
 .user,
 .name,
 .email,
-.password {
+.password,
+select {
   min-height: 2rem;
   height: 4vh;
   min-width: 16rem;
@@ -198,8 +151,14 @@ input::placeholder {
   border: none;
 }
 
+option {
+  text-align: center;
+}
+
 .Signup input:focus,
-.Login input:focus {
+.Signup select:focus,
+.Login input:focus,
+.Login select:focus {
   outline: none;
   background-color: #c7417b;
 }
@@ -223,13 +182,13 @@ input::placeholder {
 }
 
 html {
-  background-color: #1f306e;
+  background-color: #0e1633;
 }
 
 .App {
   height: 100vh;
   width: 100vw;
-  background-color: #1f306e;
+  background-color: #e3e3e3;
   color: #e3e3e3;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -266,23 +225,22 @@ a {
   color: #e3e3e3;
   -webkit-transition: 300ms;
   transition: 300ms;
-  z-index: 2;
 }
 
 a:hover {
   color: #c7417b;
 }
 
-input {
+input,
+select {
   font-family: chill;
+  background-color: rgba(143, 59, 118, 0.4);
 }
 
 button,
-input {
-  background-color: #553772;
-  border: 3px solid #f5487f;
+input,
+select {
   border-radius: 2rem;
-  color: #f5487f;
   -webkit-transition: 900ms;
   transition: 900ms;
   -ms-overflow-style: none;
@@ -294,105 +252,21 @@ form::-webkit-scrollbar {
   display: none;
 }
 
+.Main {
+  position: absolute;
+  bottom: 3%;
+  right: 3%;
+}
+
 .container {
-  background: linear-gradient(24.3deg, rgba(143, 59, 118, 0.6) 0%, rgba(199, 65, 123, 0.1) 100%);
+  background: linear-gradient(24.3deg, rgba(143, 59, 118, 0.6) 0%, rgba(199, 65, 123, 0) 100%);
   border-radius: 2rem;
   padding: 2rem;
-  position: relative;
   z-index: 2;
 }
 
 .main-header {
   font-size: 6vw;
-}
-
-.circle,
-.circle-two {
-  width: 12vw;
-  height: 12vw;
-  position: fixed;
-  background-color: rgba(199, 65, 123, 0.3);
-  border-radius: 50%;
-  -webkit-animation-name: circle;
-          animation-name: circle;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-duration: 6s;
-          animation-duration: 6s;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
-  z-index: 1;
-}
-
-.circle-two {
-  -webkit-animation-name: circle2;
-          animation-name: circle2;
-  -webkit-animation-duration: 4s;
-          animation-duration: 4s;
-  top: 62%;
-  left: 71%;
-  -webkit-animation-direction: normal;
-          animation-direction: normal;
-}
-
-@-webkit-keyframes circle {
-  0% {
-    top: 20%;
-    left: 18%;
-  }
-  50% {
-    top: 30%;
-    left: 18%;
-  }
-  100% {
-    top: 20%;
-    left: 18%;
-  }
-}
-
-@keyframes circle {
-  0% {
-    top: 20%;
-    left: 18%;
-  }
-  50% {
-    top: 30%;
-    left: 18%;
-  }
-  100% {
-    top: 20%;
-    left: 18%;
-  }
-}
-
-@-webkit-keyframes circle2 {
-  0% {
-    top: 40%;
-    left: 73%;
-  }
-  50% {
-    top: 45%;
-    left: 73%;
-  }
-  100% {
-    top: 40%;
-    left: 73%;
-  }
-}
-
-@keyframes circle2 {
-  0% {
-    top: 40%;
-    left: 73%;
-  }
-  50% {
-    top: 45%;
-    left: 73%;
-  }
-  100% {
-    top: 40%;
-    left: 73%;
-  }
 }
 
 @media only screen and (max-width: 800px) {
@@ -402,15 +276,6 @@ form::-webkit-scrollbar {
   }
   .circle-two {
     display: none;
-  }
-  .navbar {
-    margin-top: 2vw;
-    height: 3rem;
-  }
-  .navbar form {
-    width: 80%;
-    height: 100%;
-    margin-right: 1vw;
   }
   .navbar a h2 {
     display: none;
@@ -422,7 +287,8 @@ form::-webkit-scrollbar {
   .navbar button i {
     font-size: 1.6rem;
   }
-  .navbar input {
+  .navbar input,
+  .navbar select {
     max-height: 2rem;
   }
   .container {
@@ -438,5 +304,43 @@ form::-webkit-scrollbar {
     font-size: 10vh;
     margin-bottom: 10%;
   }
+}
+
+.content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content h3 {
+  color: #f5487f;
+  max-width: 50%;
+  text-align: center;
+}
+
+img {
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  -webkit-transition: 900ms;
+  transition: 900ms;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+}
+
+img:hover {
+  border-radius: 1rem;
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
 }
 /*# sourceMappingURL=App.css.map */
