--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,7 @@
 @import "./error";
 @import "./login";
 @import "./signup";
+// @import "./circles";
 
 @font-face {
   font-family: chillbold;
@@ -17,7 +18,7 @@ $color-two: #c7417b;
 $color-three: #8f3b76;
 $color-four: #553772;
 $color-five: #e3e3e3;
-$background: #1f306e;
+$background: #0e1633;
 
 * {
   padding: 0;
@@ -31,8 +32,8 @@ html {
 .App {
   height: 100vh;
   width: 100vw;
-  background-color: $background;
-  //   background: linear-gradient(180deg, #553772 0%, #1f306e 100%);
+  background-color: $color-five;
+  // background: linear-gradient(180deg, #553772 0%, #0e1633 100%);
   color: $color-five;
   display: flex;
   flex-direction: column;
@@ -55,20 +56,19 @@ a {
   text-decoration: none;
   color: $color-five;
   transition: 300ms;
-  z-index: 2;
 }
 a:hover {
   color: $color-two;
 }
-input {
+input,
+select {
   font-family: chill;
+  background-color: rgba(143, 59, 118, 0.4);
 }
 button,
-input {
-  background-color: $color-four;
-  border: 3px solid $color-one;
+input,
+select {
   border-radius: 2rem;
-  color: $color-one;
   transition: 900ms;
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -79,22 +79,28 @@ form::-webkit-scrollbar {
   display: none;
 }
 
+.Main {
+  position: absolute;
+  bottom: 3%;
+  right: 3%;
+}
 .container {
   background: linear-gradient(
     24.3deg,
     rgba(143, 59, 118, 0.6) 0%,
-    rgba(199, 65, 123, 0.1) 100%
+    rgba(199, 65, 123, 0) 100%
   );
   // border: 0.3rem solid $color-three;
   border-radius: 2rem;
   padding: 2rem;
-  position: relative;
   z-index: 2;
+  // position: relative;
+  // left: 50%;
+  // top: 80%;
 }
 .main-header {
   font-size: 6vw;
 }
-@import "./circles";
 
 @media only screen and (max-width: 800px) {
   .circle {
@@ -105,13 +111,13 @@ form::-webkit-scrollbar {
     display: none;
   }
   .navbar {
-    margin-top: 2vw;
-    height: 3rem;
-    form {
-      width: 80%;
-      height: 100%;
-      margin-right: 1vw;
-    }
+    // margin-top: 2vw;
+    // height: 3rem;
+    // form {
+    //   width: 80%;
+    //   height: 100%;
+    //   margin-right: 1vw;
+    // }
     a {
       h2 {
         display: none;
@@ -126,7 +132,8 @@ form::-webkit-scrollbar {
         font-size: 1.6rem;
       }
     }
-    input {
+    input,
+    select {
       max-height: 2rem;
     }
   }
@@ -143,5 +150,32 @@ form::-webkit-scrollbar {
   header {
     font-size: 10vh;
     margin-bottom: 10%;
+  }
+}
+
+.content {
+  // background-color: greenyellow;
+  // width: 70vw;
+  // height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  h3 {
+    color: $color-one;
+    max-width: 50%;
+    text-align: center;
+  }
+}
+img {
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  transition: 900ms;
+  filter: grayscale(100%);
+
+  &:hover {
+    border-radius: 1rem;
+    filter: grayscale(0%);
   }
 }
