--- a/src/styles/_signup.scss
+++ b/src/styles/_signup.scss
@@ -8,7 +8,8 @@ $background: #1f306e;
 .user,
 .name,
 .email,
-.password {
+.password,
+select {
   min-height: 2rem;
   height: 4vh;
   min-width: 16rem;
@@ -20,6 +21,9 @@ $background: #1f306e;
   border: none;
   //   background-color: $color-four;
 }
+option {
+  text-align: center;
+}
 // input::placeholder {
 //   color: $color-five;
 // }
@@ -27,7 +31,8 @@ $background: #1f306e;
 .Login {
   // width: 50vw;
   // height: 60vh;
-  input:focus {
+  input:focus,
+  select:focus {
     outline: none;
     background-color: $color-two;
     // border: 3px solid $color-three;
